add citation article

--- a/docs/source/biblio.bib
+++ b/docs/source/biblio.bib
@@ -2198,3 +2198,12 @@ title = {{Selective review of offline change point detection methods}},
 volume = {167},
 year = {2020}
 }
+@article{Banko2011,
+author = {Banko, Z. and Dobos, L. and Abonyi, J.},
+journal = {Conservation, Information, Evolution - towards a sustainable engineering and economy},
+number = {1},
+pages = {11--24},
+title = {{Dynamic principal component analysis in multivariate time-series segmentation}},
+volume = {1},
+year = {2011}
+}
