Minor corrections related to documentaiton

--- a/notebooks/dynamic-programming.ipynb
+++ b/notebooks/dynamic-programming.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Full Python Dynamic Programming"
+    "## Full Native Python Dynamic Programming"
    ]
   },
   {
@@ -147,13 +147,6 @@
     "rpt.display(signal, bkps, result)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
