--- a/notebooks/basic-usage.ipynb
+++ b/notebooks/basic-usage.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "# Basic usage\n",
     "\n",
-    "Let us start with a simple example to illustrate the use of `ruptures`.\n",
+    "Let us start with a simple example to illustrate the use of `ruptures`: generate a 3-dimensional piecewise constant signal with noise and estimate the change points.\n",
     "\n",
-    "First, we make the necessary imports and generate a piecewise constant signal with noise."
+    "## Setup\n",
+    "First, we make the necessary imports."
    ]
   },
   {
@@ -18,12 +19,27 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt  # for display purposes\n",
-    "import ruptures as rpt  # our package\n",
+    "import ruptures as rpt  # our package"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate and display the signal\n",
     "\n",
-    "# generate signal\n",
-    "n_samples, dim, sigma = 1000, 3, 2\n",
+    "Let us generate a 3-dimensional piecewise constant signal with Gaussian noise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_samples, n_dims, sigma = 1000, 3, 2\n",
     "n_bkps = 4  # number of breakpoints\n",
-    "signal, bkps = rpt.pw_constant(n_samples, dim, n_bkps, noise_std=sigma)"
+    "signal, bkps = rpt.pw_constant(n_samples, n_dims, n_bkps, noise_std=sigma)"
    ]
   },
   {
@@ -66,9 +82,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Change point detection\n",
     "We can now perform change point detection, meaning that we find the indexes where the signal mean changes.\n",
-    "To that end, we use a well-known method called Pelt with a $L_2$ cost function.\n",
-    "(More information on these terms in the section [What is change point detection?](/what-is-cpd) and the [User guide](/user-guide).)"
+    "To that end, we minimize the sum of squared errors when approximating the signal by a piecewise constant signal.\n",
+    "Formally, for a signal $y_0,y_1,\\dots,y_{T-1}$ ($T$ samples), we solve the following optimization problem, over all possible change positions $t_1<t_2<\\dots<t_K$ (where the number $K$ of changes is defined by the user):\n",
+    "\n",
+    "$$\n",
+    "\\hat{t}_1, \\hat{t}_2,\\dots,\\hat{t}_K = \\arg\\min_{t_1,\\dots,t_K} V(t_1,t_2,\\dots,t_K)\n",
+    "$$\n",
+    "\n",
+    "with\n",
+    "\n",
+    "$$\n",
+    "V(t_1,t_2,\\dots,t_K) := \\sum_{k=0}^K\\sum_{t=t_k}^{t_{k+1}-1} \\|y_t-\\bar{y}_{t_k..t_{k+1}}\\|^2\n",
+    "$$\n",
+    "\n",
+    "where $\\bar{y}_{t_k..t_{k+1}}$ is the empirical mean of the sub-signal $y_{t_k}, y_{t_k+1},\\dots,y_{t_{k+1}-1}$.\n",
+    "(By convention $t_0=0$ and $t_{K+1}=T$.)\n",
+    "\n",
+    "This optimization is solved with dynamic programming, using the [`Dynp`](../user-guide/detection/dynp.md) class. (More information in the section [What is change point detection?](/what-is-cpd) and the [User guide](/user-guide).)"
    ]
   },
   {
@@ -78,10 +110,17 @@
    "outputs": [],
    "source": [
     "# detection\n",
-    "algo = rpt.Pelt(model=\"l2\").fit(signal)\n",
-    "result = algo.predict(pen=200)  # 'pen' is for 'penalty'\n",
+    "algo = rpt.Dynp(model=\"l2\").fit(signal)\n",
+    "result = algo.predict(n_bkps=4)\n",
     "\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display the results"
    ]
   },
   {
@@ -115,9 +154,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "seair_env",
+   "display_name": "rpt-dev",
    "language": "python",
-   "name": "seair_env"
+   "name": "rpt-dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -129,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
