minor-doc correction

--- a/notebooks/basic-usage.ipynb
+++ b/notebooks/basic-usage.ipynb
@@ -117,6 +117,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Again the first elements are change point indexes and the last is the number of samples."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,8 +136,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again the first elements are change point indexes and the last is the number of samples.\n",
-    "\n",
     "To visualy compare the true segmentation (`bkps`) and the estimated one (`result`), we can resort to `rpt.display` a second time.\n",
     "In the following image, the alternating colors indicate the true breakpoints and the dashed vertical lines, the estimated breakpoints."
    ]
