--- a/notebooks/basic-usage.ipynb
+++ b/notebooks/basic-usage.ipynb
@@ -120,6 +120,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Again the first elements are change point indexes and the last is the number of samples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Display the results"
    ]
   },
@@ -127,8 +134,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again the first elements are change point indexes and the last is the number of samples.\n",
-    "\n",
     "To visualy compare the true segmentation (`bkps`) and the estimated one (`result`), we can resort to `rpt.display` a second time.\n",
     "In the following image, the alternating colors indicate the true breakpoints and the dashed vertical lines, the estimated breakpoints."
    ]
