--- a/notebooks/kernel-cpd-performance-comparison.ipynb
+++ b/notebooks/kernel-cpd-performance-comparison.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "\n",
     "# generate signal\n",
-    "n_samples, dim, sigma = 1000, 3, 3\n",
+    "n_samples, dim, sigma = 500, 3, 3\n",
     "n_bkps = 6  # number of breakpoints\n",
     "signal, bkps = rpt.pw_constant(n_samples, dim, n_bkps, noise_std=sigma)\n",
     "fig, ax_array = rpt.display(signal, bkps)"
@@ -105,7 +105,11 @@
     "## Linear kernel\n",
     "\n",
     "The linear kernel (see above) $k_{\\text{linear}}$ can detect changes in the mean of a signal.\n",
-    "It also corresponds to the cost function [`CostL2`](../../user-guide/costs/costl2)."
+    "It also corresponds to the cost function [`CostL2`](../../user-guide/costs/costl2).\n",
+    "\n",
+    "### Dynamic programming\n",
+    "\n",
+    "When the number of changes to detect is known beforehand, we use dynamic programming."
    ]
   },
   {
@@ -114,8 +118,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "algo_python = rpt.Dynp(model=\"l2\").fit(signal)  # written in pure python\n",
-    "algo_c = rpt.KernelDynp(kernel=\"linear\").fit(signal)  # written in C\n",
+    "algo_python = rpt.Dynp(model=\"l2\", jump=1, min_size=2).fit(\n",
+    "    signal\n",
+    ")  # written in pure python\n",
+    "algo_c = rpt.KernelCPD(kernel=\"linear\", min_size=2).fit(signal)  # written in C\n",
     "\n",
     "for (label, algo) in zip(\n",
     "    (\"Python implementation\", \"C implementation\"), (algo_python, algo_c)\n",
@@ -150,17 +156,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PELT\n",
+    "\n",
+    "When the number of changes to detect is unknown, we resort to PELT to solve the penalized detection problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo_python = rpt.Pelt(model=\"l2\", jump=1, min_size=2).fit(\n",
+    "    signal\n",
+    ")  # written in pure python\n",
+    "algo_c = rpt.KernelCPD(kernel=\"linear\", min_size=2).fit(\n",
+    "    signal\n",
+    ")  # written in C, same class as before\n",
+    "\n",
+    "\n",
+    "penalty_value = 100  # beta\n",
+    "\n",
+    "for (label, algo) in zip(\n",
+    "    (\"Python implementation\", \"C implementation\"), (algo_python, algo_c)\n",
+    "):\n",
+    "    start_time = time.time()\n",
+    "    result = algo.predict(pen=penalty_value)\n",
+    "    print(f\"{label}:\\t{time.time() - start_time:.3f} s\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, the speed-up is quite significant and depends on the signal size (number $T$ of samples and dimension $d$) and the penalty value $\\beta$.\n",
+    "We remark that, for both Python and C implementations, PELT is more efficient then dynamic programming.\n",
+    "\n",
+    "We can also check that both methods return the same set of change points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bkps_python = algo_python.predict(pen=penalty_value)\n",
+    "bkps_c = algo_c.predict(pen=penalty_value)\n",
+    "print(f\"Python implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
     "!!! note\n",
-    "    By default, `Dynp` and `KernelCPD` have `jump=5`. That is why the detected changes are all multiples of 5 in this example. To set different `jump` values, instanciate `Dynp` and `KernelCPD` as follows:\n",
-    "    \n",
-    "    ```Python\n",
-    "    algo = Dynp(jump=???)\n",
-    "    # or\n",
-    "    algo = KernelCPD(jump=???)\n",
-    "    ```"
+    "    By default, `Dynp` and `Pelt` has `jump=5`.\n",
+    "    In `KernelCPD`, `jump=1` and cannot be changed.\n",
+    "    This is because, in the C implementation, changing the `jump` does not improve the running time significatively, while it does in the Python implementation."
    ]
   },
   {
@@ -180,9 +238,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\"gamma\": 0.1}\n",
-    "algo_python = rpt.Dynp(model=\"rbf\", params=params).fit(signal)  # written in pure python\n",
-    "algo_c = rpt.KernelDynp(kernel=\"rbf\", params=params).fit(signal)  # written in C\n",
+    "params = {\"gamma\": 1e-2}\n",
+    "algo_python = rpt.Dynp(model=\"rbf\", params=params, jump=1, min_size=2).fit(\n",
+    "    signal\n",
+    ")  # written in pure python\n",
+    "algo_c = rpt.KernelCPD(kernel=\"rbf\", params=params, min_size=2).fit(\n",
+    "    signal\n",
+    ")  # written in C\n",
     "\n",
     "for (label, algo) in zip(\n",
     "    (\"Python implementation\", \"C implementation\"), (algo_python, algo_c)\n",
@@ -222,6 +284,62 @@
    "source": [
     "!!! note\n",
     "    If not provided by the user, the `gamma` parameter is chosen using the median heuristics, meaning that it is set to inverse of the median of all pairwise products $k(y_s, y_t)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PELT\n",
+    "\n",
+    "When the number of changes to detect is unknown, we resort to PELT to solve the penalized detection problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo_python = rpt.Pelt(model=\"rbf\", jump=1, min_size=2).fit(\n",
+    "    signal\n",
+    ")  # written in pure python\n",
+    "algo_c = rpt.KernelCPD(kernel=\"rbf\", min_size=2).fit(\n",
+    "    signal\n",
+    ")  # written in C, same class as before\n",
+    "\n",
+    "\n",
+    "penalty_value = 10  # beta\n",
+    "\n",
+    "for (label, algo) in zip(\n",
+    "    (\"Python implementation\", \"C implementation\"), (algo_python, algo_c)\n",
+    "):\n",
+    "    start_time = time.time()\n",
+    "    result = algo.predict(pen=penalty_value)\n",
+    "    print(f\"{label}:\\t{time.time() - start_time:.3f} s\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, the speed-up is quite significant and depends on the signal size (number $T$ of samples and dimension $d$) and the penalty value $\\beta$.\n",
+    "We remark that, for both Python and C implementations, PELT is more efficient then dynamic programming.\n",
+    "\n",
+    "We can also check that both methods return the same set of change points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bkps_python = algo_python.predict(pen=penalty_value)\n",
+    "bkps_c = algo_c.predict(pen=penalty_value)\n",
+    "print(f\"Python implementation:\\t{bkps_python}\")\n",
+    "print(f\"C implementation:\\t{bkps_python}\")\n",
+    "print(f\"(Hausdorff distance: {hausdorff(bkps_python, bkps_c):.0f} samples)\")"
    ]
   },
   {
