--- a/notebooks/kernel-cpd-performance-comparison.ipynb
+++ b/notebooks/kernel-cpd-performance-comparison.ipynb
@@ -9,6 +9,7 @@
     "## Introduction\n",
     "\n",
     "In `ruptures`, there are two ways to perform kernel change point detection:\n",
+    "\n",
     "- by using the pure Python classes [Dynp](../user-guide/detection/dynp.md) (known number of change points) and [Pelt](../user-guide/detection/pelt.md) (unknown number of change points)\n",
     "- by using the faster class (implemented in C) [KernelCPD](../user-guide/detection/kernel-cpd.md)  which contains both the dynamic programming approach and the penalized approach (PELT).\n",
     "\n",
@@ -229,7 +230,11 @@
     "\n",
     "The Gaussian kernel (see above) $k_{\\text{Gaussian}}$ can detect changes in the distribution of an i.i.d. process.\n",
     "This is a feature of several kernel functions (in particular *characteristics* kernels; see [[Gretton2012]](#Gretton2012) for more information).\n",
-    "It also corresponds to the cost function [`CostRbf`](../../user-guide/costs/costrbf)."
+    "It also corresponds to the cost function [`CostRbf`](../../user-guide/costs/costrbf).\n",
+    "\n",
+    "### Dynamic programming\n",
+    "\n",
+    "When the number of changes to detect is known beforehand, we use dynamic programming."
    ]
   },
   {
@@ -309,7 +314,7 @@
     ")  # written in C, same class as before\n",
     "\n",
     "\n",
-    "penalty_value = 10  # beta\n",
+    "penalty_value = 1  # beta\n",
     "\n",
     "for (label, algo) in zip(\n",
     "    (\"Python implementation\", \"C implementation\"), (algo_python, algo_c)\n",
