--- a/notebooks/kernel-cpd-performance-comparison.ipynb
+++ b/notebooks/kernel-cpd-performance-comparison.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "In `ruptures`, there are two ways to perform kernel change point detection:\n",
     "\n",
-    "- by using the pure Python classes [Dynp](../user-guide/detection/dynp.md) (known number of change points) and [Pelt](../user-guide/detection/pelt.md) (unknown number of change points)\n",
+    "- by using the pure Python classes [Dynp](../user-guide/detection/dynp.md) (known number of change points) and [Pelt](../user-guide/detection/pelt.md) (unknown number of change points),\n",
+    "\n",
     "- by using the faster class (implemented in C) [KernelCPD](../user-guide/detection/kernel-cpd.md)  which contains both the dynamic programming approach and the penalized approach (PELT).\n",
     "\n",
     "This example illustrates the performance of the fast C implementation compared to the pure Python one.\n",
