--- a/notebooks/kernel-cpd-performance-comparison.ipynb
+++ b/notebooks/kernel-cpd-performance-comparison.ipynb
@@ -12,59 +12,16 @@
     "\n",
     "- by using the pure Python classes [Dynp](../user-guide/detection/dynp.md) (known number of change points) and [Pelt](../user-guide/detection/pelt.md) (unknown number of change points),\n",
     "\n",
-    "- by using the faster class (implemented in C) [KernelCPD](../user-guide/detection/kernel-cpd.md)  which contains both the dynamic programming approach and the penalized approach (PELT).\n",
+    "- by using the faster class (implemented in C) [KernelCPD](../../user-guide/detection/kernelcpd)  which contains both the dynamic programming approach and the penalized approach (PELT).\n",
     "\n",
     "This example illustrates the performance of the fast C implementation compared to the pure Python one.\n",
     "\n",
-    "## Problem formulation\n",
-    "The kernel change point detection setting is now briefly described.\n",
-    "We refer the reader to [[Celisse2018](#Celisse2018), [Arlot2019](#Arlot2019)] for a more complete introduction.<br>\n",
-    "Let $y = \\{y_0,y_1,\\dots,y_{T-1}\\}$ denote a $\\mathbb{R}^d$-valued signal with $T$ samples.\n",
-    "This signal is mapped onto a [reproducing Hilbert space (rkhs)](https://en.wikipedia.org/wiki/Reproducing_kernel_Hilbert_space) $\\mathcal{H}$ associated with a user-defined kernel function $k(\\cdot, \\cdot):\\mathbb{R}^d\\times\\mathbb{R}^d\\rightarrow\\mathbb{R}$.\n",
-    "The mapping function $\\phi:\\mathbb{R}^d\\rightarrow\\mathcal{H}$ onto this rkhs is implicitly defined by $\\phi(y_t) = k(y_t, \\cdot)\\in\\mathcal{H}$ resulting in the following inner-product and norm:\n",
+    "The kernel change point detection setting is briefly described in the [user guide](../../user-guide/detection/kernelcpd).\n",
+    "The interested reader can refer to [[Celisse2018](#Celisse2018), [Arlot2019](#Arlot2019)] for a more complete introduction.<br>\n",
     "\n",
-    "$$\n",
-    "\\langle\\phi(y_s)\\mid\\phi(y_t)\\rangle_{\\mathcal{H}} = k(y_s,y_t)\n",
-    "$$\n",
-    "\n",
-    "and\n",
-    "\n",
-    "$$\n",
-    "\\|\\phi(y_t)\\|_{\\mathcal{H}}^2 = k(y_t,y_t)\n",
-    "$$\n",
-    "\n",
-    "for any samples $y_s,y_t\\in\\mathbb{R}^d$.\n",
-    "Kernel change point detection consists in finding mean-shifts in the mapped signal $\\phi(y)$ by minimizing $V(\\cdot)$ where\n",
-    "\n",
-    "$$\n",
-    "V(t_1,\\dots,t_K) := \\sum_{k=0}^K\\sum_{t=t_k}^{t_{k+1}-1} \\|\\phi(y_t)-\\bar{\\mu}_{t_k..t_{k+1}}\\|^2_{\\mathcal{H}}\n",
-    "$$\n",
-    "\n",
-    "where $\\bar{\\mu}_{t_k..t_{k+1}}$ is the empirical mean of the sub-signal $\\phi(y_{t_k}), \\phi(y_{t_k+1}),\\dots,\\phi(y_{t_{k+1}-1})$, and $t_1,t_2,\\dots,t_K$ are change point indexes, in increasing order.\n",
-    "(By convention $t_0=0$ and $t_{K+1}=T$.)\n",
-    "\n",
-    "**If the number of changes is known beforehand**, we solve the following optimization problem, over all possible change positions $t_1<t_2<\\dots<t_K$ (where the number $K$ of changes is provided by the user):\n",
-    "\n",
-    "$$\n",
-    "\\hat{t}_1,\\dots,\\hat{t}_K := \\arg\\min_{t_1,\\dots,t_K} V(t_1,\\dots,t_K).\n",
-    "$$\n",
-    "    \n",
-    "The exact optimization procedure is described in [[Celisse2018]](#Celisse2018).\n",
-    "    \n",
-    "**If the number of changes is not known**, we solve the following penalized optimization problem \n",
-    "\n",
-    "$$\n",
-    "\\hat{K}, \\{\\hat{t}_1,\\dots,\\hat{t}_{\\hat{K}}\\} := \\arg\\min_{K, \\{t_1,\\dots, t_K\\}} V(t_1,\\dots, t_K) + \\beta K\n",
-    "$$\n",
-    "\n",
-    "where $\\beta>0$ is the smoothing paramater (provided by the user) and $\\hat{K}$ is the estimated number of change points.\n",
-    "Higher values of $\\beta$ produce lower $\\hat{K}$.\n",
-    "The exact optimization procedure is described in [[Killick2012]](#Killick2012).\n",
-    "\n",
-    "The most common kernel functions are:\n",
-    "\n",
+    "The list of available kernels is available [here](../../user-guide/detection/kernelcpd#available-kernels), but in this example we only consider two:\n",
     "- the linear kernel, $k_{\\text{linear}}(x, y) = x^T y$ (Euclidean scalar product) and the induced norm is the Euclidean norm;\n",
-    "- the Gaussian kernel (also known as radial basis function, rbf), $k_{\\text{Gaussian}}(x,y)=\\exp(-\\gamma \\|x-y\\|^2)$ where $\\|\\cdot\\|$ is the Euclidean norm and $\\gamma>0$ is the user-defined parameter."
+    "- the Gaussian kernel (also known as radial basis function, rbf), $k_{\\text{Gaussian}}(x,y)=\\exp(-\\gamma \\|x-y\\|^2)$ where $\\|\\cdot\\|$ is the Euclidean norm and $\\gamma>0$ is a user-defined parameter."
    ]
   },
   {
@@ -163,7 +120,7 @@
    "source": [
     "### PELT\n",
     "\n",
-    "When the number of changes to detect is unknown, we resort to PELT to solve the penalized detection problem."
+    "When the number of changes to detect is unknown, we resort to PELT [[Killick2012]](#Killick2012) to solve the penalized detection problem."
    ]
   },
   {
