--- a/notebooks/quick-start.ipynb
+++ b/notebooks/quick-start.ipynb
@@ -111,6 +111,13 @@
    "source": [
     "In this simple example, both are quite similar and almost undistinguishable."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open this notebook in an executable environment using Binder by clicking on the following icon : [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/deepcharles/ruptures/HEAD?filepath=notebooks%2Fquick-start.ipynb)\n"
+   ]
   }
  ],
  "metadata": {
