docs(binder/download): create a resource section in NB using GH actions

--- a/notebooks/kernel-cpd-performance-comparison.ipynb
+++ b/notebooks/kernel-cpd-performance-comparison.ipynb
@@ -331,6 +331,27 @@
     "<a id=\"Arlot2019\">[Arlot2019]</a>\n",
     "Arlot, S., Celisse, A., & Harchaoui, Z. (2019). A kernel multiple change-point algorithm via model selection. Journal of Machine Learning Research, 20(162), 1–56.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ressources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open this notebook in an executable environment using Binder by clicking on the following icon : [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/deepcharles/ruptures/HEAD?filepath=notebooks%2Fkernel-cpd-performance-comparison.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download this notebook : [![Download](/images/Jupyter_logo.svg)](https://raw.githubusercontent.com/deepcharles/ruptures/master/notebooks/kernel-cpd-performance-comparison.ipynb)"
+   ]
   }
  ],
  "metadata": {
