--- a/notebooks/quick-start.ipynb
+++ b/notebooks/quick-start.ipynb
@@ -118,6 +118,27 @@
    "source": [
     "Open this notebook in an executable environment using Binder by clicking on the following icon : [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/deepcharles/ruptures/HEAD?filepath=notebooks%2Fquick-start.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ressources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open this notebook in an executable environment using Binder by clicking on the following icon : [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/deepcharles/ruptures/HEAD?filepath=notebooks%2Fquick-start.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download this notebook : [![Download](/images/Jupyter_logo.svg)](https://raw.githubusercontent.com/deepcharles/ruptures/master/notebooks/quick-start.ipynb)"
+   ]
   }
  ],
  "metadata": {
