--- a/docs/examples/kernel-cpd-performance-comparison.ipynb
+++ b/docs/examples/kernel-cpd-performance-comparison.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Kernel change point detection: a performance comparison\n",
     "\n",
+    "<!-- {{ add_binder_block(page) }} -->\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "In `ruptures`, there are two ways to perform kernel change point detection:\n",
@@ -328,9 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rpt-dev",
-   "language": "python",
-   "name": "rpt-dev"
+   "language": "python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -342,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
