--- a/docs/examples/kernel-cpd-performance-comparison.ipynb
+++ b/docs/examples/kernel-cpd-performance-comparison.ipynb
@@ -330,7 +330,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "language": "python"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -346,5 +347,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
