--- a/docs/getting-started/basic-usage.ipynb
+++ b/docs/getting-started/basic-usage.ipynb
@@ -161,7 +161,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "language": "python"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
