--- a/docs/getting-started/basic-usage.ipynb
+++ b/docs/getting-started/basic-usage.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Basic usage\n",
     "\n",
+    "<!-- {{ add_binder_block(page) }} -->\n",
+    "\n",
     "Let us start with a simple example to illustrate the use of `ruptures`: generate a 3-dimensional piecewise constant signal with noise and estimate the change points.\n",
     "\n",
     "## Setup\n",
@@ -159,9 +161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rpt-dev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "rpt-dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
