doc(music): penalized example on tempogram

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -177,7 +177,7 @@
     "    axs[idx].label_outer()\n",
     "\n",
     "algo = rpt.BottomUp(model=\"l2\").fit(chromagram.T)\n",
-    "rpt_bkps = algo.predict(n_bkps=nb_bkps)\n",
+    "rpt_bkps = algo.predict(pen=50)\n",
     "# Make the break points \"compatible\" with librosa api\n",
     "# it expects index 0 and not index of the last point\n",
     "rpt_bkps.pop(-1)\n",
@@ -186,9 +186,13 @@
     "rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
     "# Plot\n",
     "librosa.display.specshow(\n",
-    "    chromagram, y_axis=\"chroma\", x_axis=\"time\", ax=axs[idx], hop_length=hop_length\n",
+    "    chromagram,\n",
+    "    y_axis=\"chroma\",\n",
+    "    x_axis=\"time\",\n",
+    "    ax=axs[nb_plots - 1],\n",
+    "    hop_length=hop_length,\n",
     ")\n",
-    "axs[idx].vlines(\n",
+    "axs[nb_plots - 1].vlines(\n",
     "    rpt_bpks_times,\n",
     "    0,\n",
     "    chromagram.shape[0],\n",
@@ -197,8 +201,8 @@
     "    linewidth=1.5,\n",
     "    alpha=0.9,\n",
     ")\n",
-    "axs[idx].set(title=f\"Algo : {type(algo).__name__}, Cost : {cost}\")\n",
-    "axs[idx].label_outer()"
+    "axs[nb_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
+    "axs[nb_plots - 1].label_outer()"
    ]
   },
   {
@@ -219,7 +223,7 @@
     "for (algo, kernel) in product(kernelCPD_algos, kernelCPD_kernels):\n",
     "    model_objs.append((algo(kernel=kernel), kernel))\n",
     "\n",
-    "nb_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 2\n",
+    "nb_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 3\n",
     "fig, axs = plt.subplots(nrows=nb_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
     "\n",
     "times = librosa.times_like(oenv, sr=sampling_rate, hop_length=hop_length)\n",
@@ -253,7 +257,31 @@
     "        rpt_bpks_times, 16, 480, color=\"linen\", linestyle=\"--\", linewidth=1.5, alpha=0.9\n",
     "    )\n",
     "    axs[idx].set(title=f\"Algo : {type(algo).__name__}, Cost : {cost}\")\n",
-    "    axs[idx].label_outer()"
+    "    axs[idx].label_outer()\n",
+    "\n",
+    "algo = rpt.BottomUp(model=\"l2\").fit(chromagram.T)\n",
+    "rpt_bkps = algo.predict(pen=50)\n",
+    "# Make the break points \"compatible\" with librosa api\n",
+    "# it expects index 0 and not index of the last point\n",
+    "rpt_bkps.pop(-1)\n",
+    "rpt_bkps = [0] + rpt_bkps\n",
+    "# Translate index in the chromagram to time index in the original soundtrack\n",
+    "rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
+    "# Plot\n",
+    "librosa.display.specshow(\n",
+    "    tempogram,\n",
+    "    y_axis=\"tempo\",\n",
+    "    x_axis=\"time\",\n",
+    "    ax=axs[nb_plots - 1],\n",
+    "    hop_length=hop_length,\n",
+    "    sr=sampling_rate,\n",
+    "    cmap=\"magma\",\n",
+    ")\n",
+    "axs[nb_plots - 1].vlines(\n",
+    "    rpt_bpks_times, 16, 480, color=\"linen\", linestyle=\"--\", linewidth=1.5, alpha=0.9\n",
+    ")\n",
+    "axs[nb_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
+    "axs[nb_plots - 1].label_outer()"
    ]
   },
   {
