docs: add modifications for music segmentation

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -8,23 +8,23 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "In the current example, we showcase how `ruptures` can be used in order to detect change point within a music soundtrack and separate it into several contiguous segments. \n",
+    "Music segmentation is an instance of change point detection and can be performed with `ruptures`.\n",
+    "Roughly, it consists of finding the temporal boundaries of homogeneous segments, e.g. the intro, verse, chorus and outro in a song.\n",
     "\n",
-    "In order to do so, we run `ruptures` segmentation algorythms on two different set of features : \n",
+    "To that end, the music track is transformer into an informative\n",
     "\n",
-    "* A chromagram, that maps the input signal into an usually 12 features space representing the classical 12 pitch classes\n",
-    "* A tempogram computed based on the onset strength envelope of the input signal, that captures the tempo spectrum \n",
+    "In order to do so, we run `ruptures` segmentation algorithms on two different set of features : \n",
     "\n",
-    "By doing so, we provide two various ways of segmenting a music soundtrack depending on two different representations of the information carried by the input signal, respectively : \n",
+    "* a chromagram, that maps the input signal into an usually 12 features space representing the classical 12 pitch classes;\n",
+    "* a tempogram computed based on the onset strength envelope of the input signal, that captures the tempo spectrum.\n",
     "\n",
-    "* An harmonic spectral representation\n",
-    "* A rhythmic representation\n",
+    "By doing so, we provide two various ways of segmenting a music soundtrack depending on two different representations of the information carried by the input signal, respectively:\n",
     "\n",
-    "Many thanks to the creators and maintainers of the [librosa package](https://librosa.org/doc/latest/index.html) for providing :\n",
+    "* an harmonic spectral representation,\n",
+    "* a rhythmic representation.\n",
     "\n",
-    "* a simple and clean way of loading some music data\n",
-    "* some methods for perform meaningful feature engineering\n",
-    "\n"
+    "\n",
+    "To load and manipulate sound data, we use the [librosa package](https://librosa.org/doc/latest/index.html)."
    ]
   },
   {
@@ -33,7 +33,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "First, we make the necessary imports"
+    "First, we make the necessary imports."
    ]
   },
   {
@@ -42,12 +42,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from itertools import chain, product\n",
+    "\n",
     "import librosa\n",
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
-    "from itertools import product, chain\n",
     "import numpy as np\n",
-    "import ruptures as rpt  # out package"
+    "import ruptures as rpt  # our package\n",
+    "from IPython.display import Audio"
    ]
   },
   {
@@ -56,7 +58,9 @@
    "source": [
     "## Load the data\n",
     "\n",
-    "[Librosa](https://librosa.org/doc/latest/index.html) package offers several soundtracks. We run the example with the `nutcracker` one which corresponds to `Tchaikovsky - Dance of the Sugar Plum Fairy`. See [here](https://librosa.org/doc/latest/recordings.html#description-of-examples) for a description of all other possibilities. "
+    "A number of music files are available in [Librosa](https://librosa.org/doc/latest/index.html).\n",
+    "See [here](https://librosa.org/doc/latest/recordings.html#description-of-examples) for a complete list.\n",
+    "In this example, we choose the *Dance of the Sugar Plum Fairy* from *The Nutcracker* by Tchaikovsky. "
    ]
   },
   {
@@ -65,9 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Limits the duration of the soundtack to be loaded\n",
-    "duration = 30\n",
-    "y, sampling_rate = librosa.load(librosa.ex(\"nutcracker\"), duration=duration)"
+    "duration = 30  # in seconds\n",
+    "y, sampling_rate = librosa.load(librosa.ex(\"nutcracker\"), duration=duration)\n",
+    "Audio(data=y, rate=sampling_rate)"
    ]
   },
   {
@@ -88,11 +92,11 @@
     "# Number of samples between successive chroma frames\n",
     "hop_length = 512\n",
     "# Number of chroma bins to produce\n",
-    "nb_chroma = 12\n",
+    "n_chroma = 12\n",
     "# Compute de Chromagram using the usual 12 chromas\n",
-    "# chromagram of shape [nb_chroma, np.ceil(duration*sampling_rate/hop_length)]\n",
+    "# chromagram of shape [n_chroma, np.ceil(duration*sampling_rate/hop_length)]\n",
     "chromagram = librosa.feature.chroma_cqt(\n",
-    "    y=y, sr=sampling_rate, hop_length=hop_length, n_chroma=nb_chroma\n",
+    "    y=y, sr=sampling_rate, hop_length=hop_length, n_chroma=n_chroma\n",
     ")"
    ]
   },
@@ -133,7 +137,7 @@
    "outputs": [],
    "source": [
     "# We ask for 5 breaking points\n",
-    "nb_bkps = 5\n",
+    "n_bkps = 5\n",
     "\n",
     "algos = [rpt.BottomUp, rpt.Binseg]\n",
     "models = [\"l2\", \"l1\", \"rbf\"]  # \"l1\", \"rbf\", \"linear\", \"normal\", \"ar\"\n",
@@ -144,16 +148,16 @@
     "for (algo, kernel) in product(kernelCPD_algos, kernelCPD_kernels):\n",
     "    model_objs.append((algo(kernel=kernel), kernel))\n",
     "\n",
-    "nb_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 2\n",
-    "fig, axs = plt.subplots(nrows=nb_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
+    "n_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 2\n",
+    "fig, axs = plt.subplots(nrows=n_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
     "\n",
     "librosa.display.waveplot(y, sr=sampling_rate, ax=axs[0])\n",
     "axs[0].set(title=\"nutcracker\")\n",
     "axs[0].label_outer()\n",
     "\n",
-    "for idx, (algo, cost) in zip(range(1, nb_plots), model_objs):\n",
+    "for idx, (algo, cost) in zip(range(1, n_plots), model_objs):\n",
     "    algo = algo.fit(chromagram.T)\n",
-    "    rpt_bkps = algo.predict(n_bkps=nb_bkps)\n",
+    "    rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
     "    # Make the break points \"compatible\" with librosa api\n",
     "    # it expects index 0 and not index of the last point\n",
     "    rpt_bkps.pop(-1)\n",
@@ -189,10 +193,10 @@
     "    chromagram,\n",
     "    y_axis=\"chroma\",\n",
     "    x_axis=\"time\",\n",
-    "    ax=axs[nb_plots - 1],\n",
+    "    ax=axs[n_plots - 1],\n",
     "    hop_length=hop_length,\n",
     ")\n",
-    "axs[nb_plots - 1].vlines(\n",
+    "axs[n_plots - 1].vlines(\n",
     "    rpt_bpks_times,\n",
     "    0,\n",
     "    chromagram.shape[0],\n",
@@ -201,8 +205,8 @@
     "    linewidth=1.5,\n",
     "    alpha=0.9,\n",
     ")\n",
-    "axs[nb_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
-    "axs[nb_plots - 1].label_outer()"
+    "axs[n_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
+    "axs[n_plots - 1].label_outer()"
    ]
   },
   {
@@ -212,7 +216,7 @@
    "outputs": [],
    "source": [
     "# We ask for 5 breaking points\n",
-    "nb_bkps = 5\n",
+    "n_bkps = 5\n",
     "\n",
     "algos = [rpt.BottomUp, rpt.Binseg]\n",
     "models = [\"l2\", \"l1\", \"rbf\"]  # \"l1\", \"rbf\", \"linear\", \"normal\", \"ar\"\n",
@@ -223,8 +227,8 @@
     "for (algo, kernel) in product(kernelCPD_algos, kernelCPD_kernels):\n",
     "    model_objs.append((algo(kernel=kernel), kernel))\n",
     "\n",
-    "nb_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 3\n",
-    "fig, axs = plt.subplots(nrows=nb_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
+    "n_plots = len(models) * len(algos) + len(kernelCPD_kernels) * len(kernelCPD_algos) + 3\n",
+    "fig, axs = plt.subplots(nrows=n_plots, sharex=True, figsize=(8, 20), dpi=150)\n",
     "\n",
     "times = librosa.times_like(oenv, sr=sampling_rate, hop_length=hop_length)\n",
     "librosa.display.waveplot(y, sr=sampling_rate, ax=axs[0])\n",
@@ -234,9 +238,9 @@
     "axs[1].label_outer()\n",
     "axs[1].legend(frameon=True)\n",
     "\n",
-    "for idx, (algo, cost) in zip(range(2, nb_plots), model_objs):\n",
+    "for idx, (algo, cost) in zip(range(2, n_plots), model_objs):\n",
     "    algo = algo.fit(tempogram.T)\n",
-    "    rpt_bkps = algo.predict(n_bkps=nb_bkps)\n",
+    "    rpt_bkps = algo.predict(n_bkps=n_bkps)\n",
     "    # Make the break points \"compatible\" with librosa api\n",
     "    # it expects index 0 and not index of the last point\n",
     "    rpt_bkps.pop(-1)\n",
@@ -263,25 +267,32 @@
     "rpt_bkps = algo.predict(pen=50)\n",
     "# Make the break points \"compatible\" with librosa api\n",
     "# it expects index 0 and not index of the last point\n",
-    "rpt_bkps.pop(-1)\n",
-    "rpt_bkps = [0] + rpt_bkps\n",
     "# Translate index in the chromagram to time index in the original soundtrack\n",
-    "rpt_bpks_times = librosa.frames_to_time(rpt_bkps, sr=sampling_rate)\n",
+    "rpt_bpks_times = librosa.frames_to_time([0] + rpt_bkps[:-1], sr=sampling_rate)\n",
     "# Plot\n",
     "librosa.display.specshow(\n",
     "    tempogram,\n",
     "    y_axis=\"tempo\",\n",
     "    x_axis=\"time\",\n",
-    "    ax=axs[nb_plots - 1],\n",
+    "    ax=axs[n_plots - 1],\n",
     "    hop_length=hop_length,\n",
     "    sr=sampling_rate,\n",
     "    cmap=\"magma\",\n",
     ")\n",
-    "axs[nb_plots - 1].vlines(\n",
+    "axs[n_plots - 1].vlines(\n",
     "    rpt_bpks_times, 16, 480, color=\"linen\", linestyle=\"--\", linewidth=1.5, alpha=0.9\n",
     ")\n",
-    "axs[nb_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
-    "axs[nb_plots - 1].label_outer()"
+    "axs[n_plots - 1].set(title=f\"Algo : {type(algo).__name__}, Cost : l2\")\n",
+    "axs[n_plots - 1].label_outer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Study each segment independently\n",
+    "\n",
+    "Each segment of the music can be characterized by a set of features."
    ]
   },
   {
@@ -289,18 +300,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sampling_rate, bkps_times / sampling_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "\n",
+    "for (segment_number, segment) in enumerate(\n",
+    "    np.split(chromagram.T, rpt_bkps[:-1]), start=1\n",
+    "):\n",
+    "    ax.plot(segment.mean(axis=0), \"-*\", label=f\"Segment n°{segment_number}\")\n",
+    "_ = plt.legend()\n",
+    "\n",
+    "\n",
+    "bkps_times = (rpt_bpks_times * sampling_rate).astype(int)[1:]\n",
+    "for (segment_number, segment) in enumerate(np.split(y, bkps_times), start=1):\n",
+    "    print(f\"Segment n°{segment_number}\")\n",
+    "    display(Audio(data=segment, rate=sampling_rate))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.8 64-bit ('ruptures')",
-   "metadata": {
-    "interpreter": {
-     "hash": "059c4c073cf999c01cda7eb948fe0c7e3f2ee9a8e4c2f10f40f5946e9f258085"
-    }
-   },
-   "name": "python3"
+   "display_name": "rpt-dev",
+   "language": "python",
+   "name": "rpt-dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -312,9 +342,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8-final"
-  }
+   "version": "3.9.1"
+  },
+  "toc-autonumbering": false
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
